makes clouds transparent to make sure text is more readable

--- a/src/css/_clouds.scss
+++ b/src/css/_clouds.scss
@@ -1,4 +1,5 @@
 .world {
+    opacity: .9;
     z-index: 1;
     position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
